--- a/ChatLineColorMod.csproj
+++ b/ChatLineColorMod.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>ChatLineColorMod</AssemblyName>
-    <Description>My first plugin</Description>
+    <Description>MOD FOR CHANGE COLOR OF CHAT INPUT TEXT SAME AS COLOR CHANNEL IN V RISING.</Description>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
@@ -12,7 +12,7 @@
 	
 	<Target Name="CopyDLLs" AfterTargets="Build">
 		<Message Text="DLL to V Rising Game" Importance="High" />
-		<Copy SourceFiles="$(TargetDir)$(ProjectName).dll" DestinationFolder="C:\Program Files (x86)\Steam\steamapps\common\VRising\BepInEx\plugin\" />
+		<Copy SourceFiles="$(TargetDir)$(ProjectName).dll" DestinationFolder="C:\Program Files (x86)\Steam\steamapps\common\VRising\BepInEx\plugins\" />
 		<Message Text="DLL Copied OK" Importance="High" />
 	</Target>
 
