Add emoji function

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 ﻿{
   "name": "ChatLineColorMod",
-  "version_number": "1.0.0",
+  "version_number": "1.1.0",
   "website_url": "https://github.com/oscarpedrero/ChatLineColorMod",
-  "description": "MOD FOR CHANGE COLOR OF CHAT INPUT TEXT SAME AS COLOR CHANNEL IN V RISING.",
+  "description": "A mod for change color of chat input same as color channel and replace string to Emoji in V Rising.",
   "dependencies": [
     "BepInEx-BepInExPack_V_Rising-1.0.0"
   ]
