--- a/ChatLineColorMod.csproj
+++ b/ChatLineColorMod.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>ChatLineColorMod</AssemblyName>
-    <Description>MOD FOR CHANGE COLOR OF CHAT INPUT TEXT SAME AS COLOR CHANNEL IN V RISING.</Description>
-    <Version>1.0.0</Version>
+    <Description>A mod for change color of chat input same as color channel and replace string to Emoji in V Rising</Description>
+    <Version>1.1.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
 	<UnhollowedDllPath>C:\Program Files (x86)\Steam\steamapps\common\VRising\BepInEx\unhollowed</UnhollowedDllPath>
@@ -15,6 +15,14 @@
 		<Copy SourceFiles="$(TargetDir)$(ProjectName).dll" DestinationFolder="C:\Program Files (x86)\Steam\steamapps\common\VRising\BepInEx\plugins\" />
 		<Message Text="DLL Copied OK" Importance="High" />
 	</Target>
+	
+	<ItemGroup>
+	  <Compile Remove="Utils\EmojisOriginal.cs" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <None Remove="Data\emojis..json" />
+	</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="BepInEx.IL2CPP" Version="6.0.0-*" IncludeAssets="compile" />
@@ -451,6 +459,10 @@
 		<Reference Include="VivoxUnity">
 			<HintPath>$(UnhollowedDllPath)\VivoxUnity.dll</HintPath>
 		</Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Data\" />
 	</ItemGroup>
   
 </Project>
