--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 ﻿{
   "name": "ChatLineColorMod",
-  "version_number": "1.1.0",
+  "version_number": "1.2.0",
   "website_url": "https://github.com/oscarpedrero/ChatLineColorMod",
-  "description": "A mod for change color of chat input same as color channel and replace string to Emoji in V Rising.",
+  "description": "A client mod that adds channel name and change the color of the chat input text as the color of the cannel where you are typing. It also replace text string with emojis.",
   "dependencies": [
-    "BepInEx-BepInExPack_V_Rising-1.0.0"
+    "BepInEx-BepInExPack_V_Rising-1.0.0",
   ]
 }
