--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,6 @@
   "website_url": "https://github.com/oscarpedrero/ChatLineColorMod",
   "description": "A client mod that adds channel name and change the color of the chat input text as the color of the cannel where you are typing. It also replace text string with emojis.",
   "dependencies": [
-    "BepInEx-BepInExPack_V_Rising-1.0.0",
+    "BepInEx-BepInExPack_V_Rising-1.0.0"
   ]
 }
