--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 ﻿{
   "name": "ChatLineColorMod",
-  "version_number": "1.3.0",
+  "version_number": "1.3.2",
   "website_url": "https://github.com/oscarpedrero/ChatLineColorMod",
   "description": "A client mod that adds channel name and change the color of the chat input text as the color of the channel where you are typing, AutoClean Chat Window and replace text string with emojis.",
   "dependencies": [
-    "BepInEx-BepInExPack_V_Rising-1.0.0"
+    "BepInEx-BepInExPack_V_Rising-1.0.0",
+    "molenzwiebel-Wetstone-1.1.0"
   ]
 }
