--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 ﻿{
   "name": "ChatLineColorMod",
-  "version_number": "1.3.3",
+  "version_number": "1.3.5",
   "website_url": "https://github.com/oscarpedrero/ChatLineColorMod",
-  "description": "A client mod that adds channel name and change the color of the chat input text as the color of the channel where you are typing, AutoClean Chat Window and replace text string with emojis.",
+  "description": "A client mod that adds extra functionality to the chat window.",
   "dependencies": [
     "BepInEx-BepInExPack_V_Rising-1.0.0",
     "molenzwiebel-Wetstone-1.1.0"
