--- a/ChatLineColorMod.csproj
+++ b/ChatLineColorMod.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+	  <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>ChatLineColorMod</AssemblyName>
     <Description>A client mod that adds channel name and change the color of the chat input text as the color of the cannel where you are typing, AutoClean Chat Window and replace text string with emojis.</Description>
-    <Version>1.3.8</Version>
+    <Version>2.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
 	<RestoreSources>
@@ -16,7 +16,7 @@
 	
 	<Target Name="CopyDLLs" AfterTargets="Build">
 		<Message Text="DLL to V Rising Game" Importance="High" />
-		<Copy SourceFiles="$(TargetDir)$(ProjectName).dll" DestinationFolder="C:\Program Files (x86)\Steam\steamapps\common\VRising\BepInEx\plugins\" />
+		<Copy SourceFiles="$(TargetDir)$(ProjectName).dll" DestinationFolder="D:\SteamLibrary\steamapps\common\VRising\BepInEx\plugins\" />
 		<Message Text="DLL Copied OK" Importance="High" />
 	</Target>
 	
@@ -29,15 +29,20 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BepInEx.IL2CPP" Version="6.0.0-*" IncludeAssets="compile" />
-    <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
-	<PackageReference Include="VRising.GameData" Version="0.3.3" />
-	<PackageReference Include="Wetstone" Version="1.2.0" />
-	<PackageReference Include="VRising.Unhollowed.Client" Version="0.5.*" />
+	  <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be*" IncludeAssets="compile" />
+	  <PackageReference Include="BepInEx.Core" Version="6.0.0-be*" IncludeAssets="compile" />
+	  <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
+	  <PackageReference Include="VRising.Bloodstone" Version="0.1.*" />
+	  <PackageReference Include="VRising.Unhollowed.Client" Version="0.6.5.57575090" />
 	<PackageReference Include="Fody" Version="6.6.3" PrivateAssets="All" />
 	<PackageReference Include="ILMerge.Fody" Version="1.23.0" PrivateAssets="All" />
-	  <PackageReference Include="UniverseLib.IL2CPP.Unhollower" Version="1.5.1" />
   </ItemGroup>
+	<ItemGroup>
+		<Reference Include="UniverseLib.IL2CPP.Interop">
+			<HintPath>UniverseLib.IL2CPP.Interop.dll</HintPath>
+			<Private>true</Private>
+		</Reference>
+	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Data\" />
